# django

./: db.sqlite3  project_structure.txt  pyproject.toml
config/: settings.py  urls.py
templates/: todo_info.html  todo_list.html
templates/registration/: base.html  login.html  signup.html  signup_done.html  verify_failed.html  verify_success.html
templates/todo/: base.html  pagination.html  todo_create.html  todo_form.html  todo_info.html  todo_list.html  todo_update.html
todo/: admin.py  cb_views.py  forms.py  models.py  tests.py  urls.py
todo/migrations/: 0001_initial.py  0002_initial.py  0004_comment.py  0005_alter_comment_options_alter_todo_options_and_more.py  0006_todo_completed_image_todo_thumbnail.py
todo/static/css/: base_todo.css  todo_info.css  todo_list.css
users/: cb_views.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/static/css/: base_users.css  login.css  signup.css
utils/: email.py
